--- a/intern_2project.css
+++ b/intern_2project.css
@@ -1,8 +1,364 @@
-*body{
+*{
     margin: 0px;
     padding: 0px;
+    background-color: rgb(103, 175, 238);
+    color: wheat;
+    font-family: 'Poppins', sans-serif;
 }
-.vl{
-    border-left: 6px solid green;
-    height: 500px;
+nav{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 80px;
+    background-color: rgb(135, 197, 252);
+}
+nav ul{
+    display: flex;
+    justify-content: center;
+    background-color: rgb(135, 197, 252);
+}
+nav ul li{
+    font-size: 1.9rem;
+    letter-spacing: 1px;
+    list-style: none;
+    margin: 0 23px;
+    background-color: rgb(135, 197, 252);
+}
+nav ul li a{
+    font-weight: 600;
+    text-decoration: none;
+    color: white;
+}
+nav ul li a:hover{
+    color: rgb(103, 102, 102);
+    font-size: 2rem;
+}
+.left{
+    color: black;
+    font-weight: bold;
+    font-size: 4.1rem;
+    background-color: rgb(135, 197, 252);
+}
+.firstsection{
+    display: flex;
+    justify-content: space-evenly;
+    margin: 100px 0;
+    align-items: center;
+}
+.firstsection > div{
+    width: 30%;
+}
+.leftsection{
+    font-size: 4rem;
+    margin: 70px 0;
+}
+.rightsection img{
+    width: 600px;
+    height: 400px;
+}
+.purple{
+    color: blueviolet;
+    font-weight: 500;
+}
+#element{
+    font-weight: 500;
+    color: blueviolet;
+}
+
+/* -------------QUALIFICATION----------- */
+
+.secondsection{
+    max-width: 80vw;  
+    margin: auto; 
+    height: 50vh;
+}
+.secondsection h1{
+    font-size: 23px;
+    cursor: pointer;
+}
+.education{
+    margin-top: 40px;
+    font-size: 1.9rem;
+    margin-left: 110px;
+}
+.education table{
+    text-align: center;
+}
+td, th {
+    color: rgb(58, 43, 122);
+    background-color: rgb(9, 177, 203);
+    border: 5px solid #f6d2d2;
+    border-top-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    justify-content: space-around;
+    padding-left: 50px;
+    padding-right: 60px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+  }
+.education table tr td b{
+    color: rgb(58, 43, 122);
+    font-size: 19px;
+}
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+
+/* -----------SKILL---------- */
+
+.thirdsection{
+    max-width: 80vw;  
+    margin: auto; 
+    height: 50vh;
+}
+.box{
+    background: aliceblue;
+    width: 88vw;
+    height: 2px;
+    margin-top: 90px; 
+    margin-left: -58px;
+}
+
+.thirdsection h1{
+    font-size: 23px;
+    margin-top: 40px;
+}
+.thirdsection h1:hover{
+    cursor: pointer;
+}
+.skill{
+    margin-top: 50px;
+    margin-left: 100px;
+}
+
+.skill ul li{
+    color: rgb(244, 4, 4);
+    font-style: oblique;
+    padding-left: 20px;
+    margin-top: 20px;
+    list-style: none;
+    font-size: 20px;
+    font-weight: 400;
+    width: 100%;
+}
+.skill ul li:hover{
+    text-decoration: underline;
+    transition-property: all;
+    cursor: pointer;
+    color: seagreen;
+}
+.html{
+    border-radius: 50px;
+    background-color: rgb(0, 0, 0);
+    width: 700px;
+    height: 10px;
+}
+.html:hover{
+    background-color: seagreen;
+}
+.css{
+    background-color: blanchedalmond;
+    width: 650px;
+    height: 10px;
+}
+.css:hover{
+    background-color: seagreen;
+}
+.js{
+    border-radius: 50px;
+    background-color: black;
+    width: 420px;
+    height: 10px;
+}
+.js:hover{
+    background-color: seagreen;
+}
+.sql{
+    background-color: blanchedalmond;
+    width: 450px;
+    height: 10px;
+}
+.sql:hover{
+    background-color: seagreen;
+}
+.php{
+    border-radius: 50px;
+    background-color: black;
+    width: 500px;
+    height: 10px;
+}
+.php:hover{
+    background-color: seagreen;
+}
+.bootstrap{
+    background-color: blanchedalmond;
+    width: 650px;
+    height: 10px;
+}
+.bootstrap:hover{
+    background-color: seagreen;
+}
+
+/* ---------------PROJECT --------------- */
+
+.fourthsection{
+    max-width: 80vw;  
+    margin: auto; 
+    height: 104vh;
+}
+.fourthsection h1{
+    font-size: 23px;
+    margin-top: 40px;
+    cursor: pointer;
+}
+.box1{
+    background: aliceblue;
+    width: 88vw;
+    height: 3px;
+    margin-top: 150px; 
+    margin-left: -58px;
+}
+
+.project{
+    margin-top: 50px;
+    margin-left: 100px;
+    display: grid;
+    grid-template-columns: 500px 600px;
+    grid-template-rows: 300px;
+    column-gap: 50px;
+}
+.prbody{
+    padding-left: 40px;
+    padding-right: 40px;
+    border-radius: 30px;
+    background-color: rgba(5, 138, 255, 0.75);
+    font-size: 16px;
+}
+.prbody h1{
+    text-align: center;
+    background-color: burlywood;
+    margin-right: 20px;
+}
+.prbody h1:hover{
+    background-color: bisque;
+}
+.prbody:hover{
+    background-color: rgb(249, 187, 112);
+    color: rgb(16, 4, 255);
+}
+.prbody h1{
+    color: rgb(0, 8, 8);
+}
+.footer{
+    background-color: rgb(9, 132, 240);
+    height: 200px;
+    width: 200px;
+    
+}
+.box2{
+    background: aliceblue;
+    width: 88vw;
+    height: 3px;
+    margin-top: 90px; 
+    margin-left: 90px;
+}
+
+/* --------- contact --------- */
+
+.row{
+    margin-top: 50px;
+    margin-left: 150px;
+    padding-bottom: 0px;
+    display: grid;
+    grid-template-columns: 400px 700px; 
+    grid-template-rows: 450px; 
+}
+.sub-title{
+    font-size: 23px;
+}
+.contact-left{
+    flex-basis: 35%;
+}
+.contact-left p{
+    margin-top: 30px;
+}
+.contact-right{
+    flex-basis: 60%;
+}
+.social-icons{
+    margin-top: 30px;
+}
+.social-icons a{
+    text-decoration: none;
+    font-size: 30px;
+    margin-right: 15px;
+    color: #ababab;
+    display: inline-block;
+    transition: transform 0.5s;
+}
+.social-icons a:hover{
+    color: #ff004f;
+    transform: translateY(-5px);
+}
+.btn{
+    display: inline-block;
+    background: #ff004f;
+    border-radius: 7px;
+    padding-top: 12px;
+    padding-bottom: 12px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-top: 18px;
+    font-size: 14px;
+    text-decoration: none;
+    margin-bottom: 40px;
+}
+
+.btn2{
+    display: inline-block;
+    background: #ff004f;
+    border-radius: 5px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 12px;
+    padding-right: 12px;
+    margin-top: 18px;
+    font-size: 12px;
+    text-decoration: none;
+}
+.contact-right form{
+    width: 100%;
+}
+form input , form textarea{
+    width: 100%;
+    border: 0;
+    outline: none;
+    border-color: #262626;
+    padding: 15px;
+    margin: 15px 0;
+    color: #fff;
+    font-size: 18px;
+    border-radius: 6px;
+}
+form btn2{
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 18px;
+    cursor: pointer;
+}
+.copyright p{
+    width: 100%;
+    font-size: 12px;
+    text-align: center;
+    padding: 25px 0;
+    background: #262626;
+}
+main hr{
+    border: 0;
+    height: 1.2px;
+    background-color: aliceblue;
+    margin: 40px 84px;
+}
+.text-gray{
+    color: gray;
 }
